--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
         // 自动加载数据文件
         function loadDataFileAuto() {
-            fetch('DutyRotation/data.txt')
+            fetch('data.txt')
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('无法加载数据文件');
@@ -421,4 +421,5 @@
     </script>
 </body>
 </html>
+
 
